lose check is now workign

--- a/src/main/resources/static/blackjack.html
+++ b/src/main/resources/static/blackjack.html
@@ -45,6 +45,7 @@
     <script src="./src/main/data/BlackJackGameState.js"></script>
     <script src="./src/main/logging/BlackJackGameStateLogger.js"></script>
     <script src="./src/main/view/BlackJackGameView.js"></script>
+    <script src="./src/main/logging/BlackJackGameViewLogger.js"></script>
     <script src="./src/main/controls/BlackJackGame.js"></script>
     <script src="./app.js"></script>
   </footer>
