--- a/src/main/resources/static/blackjack.html
+++ b/src/main/resources/static/blackjack.html
@@ -27,6 +27,7 @@
 				<input type="button" class="btn" value="stay" onclick="stay()">
 			</div>
 			<div class="winner" id="winner"></div>
+            <div class="loser" id="loser"></div>
 			<div id="deck" class="deck">
 				<div id="deckcount">52</div>
 			</div>
